--- a/index.html
+++ b/index.html
@@ -10,27 +10,111 @@
     <link rel="stylesheet" href="./assets/css/leaflet.css" />
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="./assets/js/leaflet.js"></script>
+
+    <link rel="stylesheet" href="./assets/css/simplebar.css" />
+    <script src="./assets/js/simplebar.js"></script>
+
     <!-- TODO: bundle those styles -->
     <link rel="stylesheet" href="./src/styles.css">
     <link rel="stylesheet" href="./src/map.css">
-    <link rel="stylesheet" href="./src/header.css">
-
+    <link rel="stylesheet" href="./src/nav.css">
+    <link rel="stylesheet" href="./src/aside.css">
+    <link rel="stylesheet" href="./src/main.css">
     <script defer src="./build/js/app.js"></script>
 </head>
 
 <body>
     <nav>
         <a href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><title>Начало - Карта на София със значението на имената на улиците</title><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zM7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.88-2.88 7.19-5 9.88C9.92 16.21 7 11.85 7 9z"/><circle cx="12" cy="9" r="2.5"/></svg>  
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                <title>Начало - Карта на София със значението на имената на улиците</title>
+                <path d="M0 0h24v24H0V0z" fill="none" />
+                <path
+                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zM7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.88-2.88 7.19-5 9.88C9.92 16.21 7 11.85 7 9z" />
+                <circle cx="12" cy="9" r="2.5" />
+            </svg>
         </a>
         <a href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><title>За нас</title><path d="M0 0h24v24H0V0z" fill="none"/><path d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                <title>За нас</title>
+                <path d="M0 0h24v24H0V0z" fill="none" />
+                <path
+                    d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z" />
+            </svg>
         </a>
         <a href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><title>Facebook</title><path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/><path d="M21 8h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2zm0 4l-3 7H9V9l4.34-4.34L12.23 10H21v2zM1 9h4v12H1z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                <title>Facebook</title>
+                <path d="M0 0h24v24H0V0z" fill="none" opacity=".87" />
+                <path
+                    d="M21 8h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2zm0 4l-3 7H9V9l4.34-4.34L12.23 10H21v2zM1 9h4v12H1z" />
+            </svg>
         </a>
     </nav>
-    <div id="mapid"></div>
+    <main>
+        <aside>
+            <header>
+                <img src="./assets/img/Sofia_Municipality_Logo.png" alt="Sofa municipality logo">
+                <h1><span>Sofia Streets</span> - карта показващата значението на имената на улиците и булевардите</h1>
+            </header>
+
+            <h2>Случайни места:</h2>
+            <ul data-simplebar class="random-places">
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+                </li>
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+                </li>
+                <li class="random-place">
+                    ул. Гео Милев
+                </li>
+                <li class="random-place">
+                    бул. Шипченски проход
+                </li>
+            </ul>
+        </aside>
+        <div id="mapid"></div>
+    </main>
+
 </body>
 
 </html>
