finishing the aside menu

--- a/index.html
+++ b/index.html
@@ -61,54 +61,76 @@
             <h2>Случайни места:</h2>
             <ul data-simplebar class="random-places">
                 <li class="random-place">
-                    ул. Гео Милев
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    бул. Шипченски проход
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    ул. Гео Милев
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    бул. Шипченски проход
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    ул. Гео Милев
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    бул. Шипченски проход
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    ул. Гео Милев
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    бул. Шипченски проход
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    ул. Гео Милев
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    бул. Шипченски проход
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    ул. Гео Милев
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
+                </li><li class="random-place">
+                    <span>ул. Гео Милев</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
                 <li class="random-place">
-                    бул. Шипченски проход
-                </li>
-                </li>
-                <li class="random-place">
-                    ул. Гео Милев
-                </li>
-                <li class="random-place">
-                    бул. Шипченски проход
-                </li>
-                </li>
-                <li class="random-place">
-                    ул. Гео Милев
-                </li>
-                <li class="random-place">
-                    бул. Шипченски проход
+                    <span>бул. Шипченски проход</span>
+                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
                 </li>
             </ul>
         </aside>
