created database like file with places and bind it to markers.js to create all markers and random places dynamically with goto functionality

--- a/index.html
+++ b/index.html
@@ -59,63 +59,8 @@
             </header>
 
             <h2>Случайни места:</h2>
-            <ul data-simplebar class="random-places">
-                <li class="random-place" data-lat="42.684155" data-lng="23.359627">
-                    <span>ул. Гео Милев</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.681331" data-lng="23.361912">
-                    <span>бул. Шипченски проход</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.684155" data-lng="23.359627">
-                    <span>ул. Гео Милев</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.681331" data-lng="23.361912">
-                    <span>бул. Шипченски проход</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.684155" data-lng="23.359627">
-                    <span>ул. Гео Милев</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.681331" data-lng="23.361912">
-                    <span>бул. Шипченски проход</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.684155" data-lng="23.359627">
-                    <span>ул. Гео Милев</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.681331" data-lng="23.361912">
-                    <span>бул. Шипченски проход</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.684155" data-lng="23.359627">
-                    <span>ул. Гео Милев</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.681331" data-lng="23.361912">
-                    <span>бул. Шипченски проход</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.684155" data-lng="23.359627">
-                    <span>ул. Гео Милев</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.681331" data-lng="23.361912">
-                    <span>бул. Шипченски проход</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.684155" data-lng="23.359627">
-                    <span>ул. Гео Милев</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
-                <li class="random-place" data-lat="42.681331" data-lng="23.361912">
-                    <span>бул. Шипченски проход</span>
-                    <img src="./assets/img/play_circle_filled-24px.svg" alt="Go to randomly selected street">
-                </li>
+            <ul class="random-places">
+                
             </ul>
         </aside>
         <div id="mapid"></div>
