--- a/index.html
+++ b/index.html
@@ -20,10 +20,24 @@
     <link rel="stylesheet" href="./src/nav.css">
     <link rel="stylesheet" href="./src/aside.css">
     <link rel="stylesheet" href="./src/main.css">
+    <link rel="stylesheet" href="./src/loader.css">
+
     <script defer src="./build/js/app.js"></script>
 </head>
 
 <body>
+    <div class="loader-wrapper hidden">
+        <div class="lds-roller">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <nav>
         <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
