small notes and cleanups

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div class="loader-wrapper hidden">
+    <div class="loader-wrapper">
         <div class="lds-roller">
             <div></div>
             <div></div>
