--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./src/aside.css">
     <link rel="stylesheet" href="./src/main.css">
     <link rel="stylesheet" href="./src/loader.css">
+    <link rel="stylesheet" href="./src/modal.css">
 
     <script defer src="./build/js/app.js"></script>
 </head>
@@ -38,6 +39,84 @@
             <div></div>
         </div>
     </div>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div data-simplebar class="modal-content ">
+            <span class="close">&times;</span>
+            <div class="info-wrapper">
+                <div class="info">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>За нас</title>
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path
+                            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z" />
+                    </svg>
+                    <h3>Информация:</h3>
+                    <p>
+                        За малки и за големи, но най-вече любопитни. Този проект предоставя
+                        знание за значението на имената на българските улици.
+                        Информацията, която дава, не гарантира пълна коректност и обхват.
+                        Ако имате препоръки, предложения за промяна на съдържанието или искате да ни оставите
+                        обратна връзка, моля вижте информацията за контакт. Този проект е напълно безплатен,
+                        но ако искате да ни подкрепите, моля обърнете внимание на начините за това.
+                        Благодарим ви!
+                    </p>
+                </div>
+                <div class="contact">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M21 8V7l-3 2-3-2v1l3 2 3-2zm3-5H0v18h23.99L24 3zM8 6c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm6 12H2v-1c0-2 4-3.1 6-3.1s6 1.1 6 3.1v1zm8-6h-8V6h8v6z" />
+                    </svg>
+                    <h3>Контакт:</h3>
+                    <a class="mail-link" href="mailto:contact@streets.bg">contact@streets.bg</a>
+                    <a class="facebook-link" href="/">Facebook</a>
+                </div>
+                <div class="support">
+                    <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
+                        <g>
+                            <rect fill="none" height="24" width="24" />
+                            <path
+                                d="M19,3H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V5C21,3.9,20.1,3,19,3z M12.01,18 c-0.7,0-1.26-0.56-1.26-1.26c0-0.71,0.56-1.25,1.26-1.25c0.71,0,1.25,0.54,1.25,1.25C13.25,17.43,12.72,18,12.01,18z M15.02,10.6 c-0.76,1.11-1.48,1.46-1.87,2.17c-0.16,0.29-0.22,0.48-0.22,1.41h-1.82c0-0.49-0.08-1.29,0.31-1.98c0.49-0.87,1.42-1.39,1.96-2.16 c0.57-0.81,0.25-2.33-1.37-2.33c-1.06,0-1.58,0.8-1.8,1.48L8.56,8.49C9.01,7.15,10.22,6,11.99,6c1.48,0,2.49,0.67,3.01,1.52 C15.44,8.24,15.7,9.59,15.02,10.6z" />
+                        </g>
+                    </svg>
+                    <h3>Подкрепете ни:</h3>
+                    <a class="patreon-link" href="mailto:contact@streets.bg">streets.bg on Patreon</a>
+                    <a class="cofee-link" href="mailto:contact@streets.bg">streets.bg on Buy me a cofee</a>
+                    <a class="mail-link" href="mailto:contact@streets.bg">contact@streets.bg</a>
+                </div>
+                <div class="future">
+                    <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
+                        <g>
+                            <rect fill="none" height="24" width="24" />
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M12,2C6.48,2,2,6.48,2,12c0,5.52,4.48,10,10,10s10-4.48,10-10 C22,6.48,17.52,2,12,2z M16.9,15.49l-1.4,1.4c-0.2,0.2-0.51,0.2-0.71,0l-3.41-3.41c-1.22,0.43-2.64,0.17-3.62-0.81 c-1.11-1.11-1.3-2.79-0.59-4.1l2.35,2.35l1.41-1.41L8.58,7.17c1.32-0.71,2.99-0.52,4.1,0.59c0.98,0.98,1.24,2.4,0.81,3.62 l3.41,3.41C17.09,14.98,17.09,15.3,16.9,15.49z"
+                                    fill-rule="evenodd" />
+                            </g>
+                        </g>
+                    </svg>
+                    <h3>Какво предстои:</h3>
+                    <ul>
+                        <li>Добавяне на повече градове/улици</li>
+                        <li>
+                            Добавяне и управление чрез филтри на:
+                            <ul>
+                                <li>Маркери за забележителности в градовете</li>
+                                <li>Маркери за забележителности извън градовете</li>
+                                <li>Маркери за достъпни публични/частни тоалетни в и извън населените места
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
     <nav>
         <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
@@ -48,7 +127,7 @@
                 <circle cx="12" cy="9" r="2.5" />
             </svg>
         </a>
-        <a href="/">
+        <a id="myBtn">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                 <title>За нас</title>
                 <path d="M0 0h24v24H0V0z" fill="none" />
@@ -56,6 +135,7 @@
                     d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z" />
             </svg>
         </a>
+        <!-- TODO: link to facebook page -->
         <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                 <title>Facebook</title>
@@ -74,7 +154,7 @@
 
             <h2>Случайни места:</h2>
             <ul class="random-places">
-                
+
             </ul>
         </aside>
         <div id="mapid"></div>
