set what home button on right nav should do

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
     </div>
     <nav>
-        <a href="/">
+        <a id="home">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                 <title>Начало - Карта на София със значението на имената на улиците</title>
                 <path d="M0 0h24v24H0V0z" fill="none" />
@@ -149,7 +149,7 @@
         <aside>
             <header>
                 <img src="./assets/img/Sofia_Municipality_Logo.png" alt="Sofa municipality logo">
-                <h1><span>Sofia Streets</span> - карта показващата значението на имената на улиците и булевардите</h1>
+                <h1><span>streets.bg</span> - карта показващата значението на имената на улиците и булевардите</h1>
             </header>
 
             <h2>Случайни места:</h2>
