--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
+    <link rel="icon" type="image/png" href="./assets/img/favicon.png"/>
     <title>Sofia streets names</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/leaflet.css" />
@@ -148,8 +148,8 @@
     <main>
         <aside>
             <header>
-                <img src="./assets/img/Sofia_Municipality_Logo.png" alt="Sofa municipality logo">
-                <h1><span>streets.bg</span> - карта показващата значението на имената на улиците и булевардите</h1>
+                <img src="./assets/img/logo.png" alt="Sofa municipality logo">
+                <h1>Карта показващата значението на имената на улиците и булевардите</h1>
             </header>
 
             <h2>Случайни места:</h2>
